# qainspector

./: .gitignore  CMakeLists.txt  PaintedWidget.cpp  PaintedWidget.hpp  analyzemanager.cpp  analyzemanager.h  analyzemodel.cpp  analyzemodel.h  iteminfodialog.cpp  iteminfodialog.h  main.cpp  mytreemodel2.cpp  mytreemodel2.h  qainspector.pro  socketconnector.cpp  socketconnector.h  treeviewdialog.cpp  treeviewdialog.h
qml/: Main.qml
